# techreach-c-assignment-pub

./: CMakeLists.txt  README.md
include/c-assignment/: Command.hpp  CommandResources.hpp  DateLogger.hpp  FcCommand.hpp  FileStreamsProvider.hpp  FunctionalLogger.hpp  Initializer.hpp  Loader.hpp  LoadersProcessor.hpp  Logger.hpp  OutCommand.hpp  OutLogger.hpp  Processor.hpp  RdtCommand.hpp  RfcCommand.hpp
src/: CMakeLists.txt  Command.cpp  DateLogger.cpp  FcCommand.cpp  FileStreamsProvider.cpp  FunctionalLogger.cpp  Loader.cpp  Logger.cpp  OutCommand.cpp  OutLogger.cpp  Processor.cpp  RdtCommand.cpp  RfcCommand.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
